tests/snapshots/output/destinations__delete.snap
---
source: tests/cli/snapshots.rs
---
$ vendo destinations delete c0000002-0000-4000-8000-000000000002 --yes
exit: 0
--- stdout ---
Done: Destination c0000002... deleted.
