tests/snapshots/output/destinations__refresh_source_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo destinations refresh-source c0000001-0000-4000-8000-000000000001 --from 2026-01-01 --to 2026-01-08 --json
exit: 0
--- stdout ---
{
  "data": {
    "status": "importing",
    "importJobIds": [
      "b0000005-0000-4000-8000-000000000005"
    ],
    "message": "Triggered 1 import job(s) for missing data",
    "requestedStart": "2026-01-01T00:00:00.000Z",
    "requestedEnd": "2026-01-08T00:00:00.000Z"
  }
}
