tests/snapshots/output/destinations__resume.snap
---
source: tests/cli/snapshots.rs
---
$ vendo destinations resume c0000002-0000-4000-8000-000000000002
exit: 0
--- stdout ---
Done: Destination c0000002... resumed.
